# data-agency

./: .gitattributes  .gitignore  README.md  pyproject.toml
.devcontainer/: .bash_history  .bashrc  Dockerfile  devcontainer.json
sample/: code_generation.py  full_workflow.ipynb
src/data_agency/: __init__.py  magic.py  sample.py
src/data_agency/analysis/sandbox/: Dockerfile.runner  docker_runtime.py  runner.py
src/data_agency/commands/analyze/: agent.py  llm_service.py  magic.py  models.py  notebopok_ui.py  workflow.py  workflow_ui.py
src/data_agency/commands/analyze/sandbox/: docker_runtime.py  prelude.py  runner.py
src/data_agency/commands/config/: magic.py
src/data_agency/commands/describe/: agent.py  magic.py
src/data_agency/commands/find/: agent.py  display_service.py  llm_service.py  magic.py  models.py  search_service.py
src/data_agency/commands/load/: load_service.py  magic.py
src/data_agency/common/: llm_client.py  load_env.py  mylog.py  styles.py
test/: test_sample.py  test_sandbox_runner_integration.py
test/describe/: test_describe_agent.py
test/find/: -est_display_service.py  test_agent.py  test_llm_service.py  test_search_service.py
test/load/: test_load_data_service.py
