[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-agency"
version = "0.1.0"
description = "Agentic data retrival and analysis."
authors = [
    { name = "Yoki", email = "yotokyos@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0",
    "diskcache>=5.6.3",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "autogen-agentchat",
    "pandas",
    "dotenv",
    "autogen-ext[openai, diskcache]",
    "lettuce_logger @ git+https://github.com/yoki/lettuce_logger.git@v0.1.2",
    "mydevtools @ git+https://github.com/yoki/mydevtools.git@v0.1.2",
    "typing-extensions>=4.12.2"
]

[project.optional-dependencies]
jupyter = ["jupyter", "ipython"]
dev=['pytest', 'pytest-asyncio']

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_agency*"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"data_agency.analysis.sandbox" = ["Dockerfile.runner"]


[tool.pytest]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
]
pythonpath = [
    "/workspaces/synapse/src/data-agency",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow"
]
addopts = "-m 'not slow'"


# do not show waves for notebooks
[tool.ruff.lint]
exclude = ["*.ipynb"]
